# st-datafilter

./: .gitignore  README.md  pyproject.toml
examples/: example.py
st_datafilter/: __init__.py  datafilter.py
